--- a/src/data/seasonTool.json
+++ b/src/data/seasonTool.json
@@ -3,24 +3,28 @@
         "название": "Лопата снеговая",
         "тип": "Складная",
         "материал": "Алюминий",
-        "цена": "1200 руб."
+        "цена": "1200 руб.",
+        "id":"1s"
     },
     {
         "название": "Грабли",
         "тип": "Распушительные",
         "материал": "Сталь",
-        "цена": "800 руб."
+        "цена": "800 руб.",
+        "id":"2s"
     },
     {
         "название": "Садовые ножницы",
         "тип": "Кусторезы",
         "материал": "Нержавеющая сталь",
-        "цена": "600 руб."
+        "цена": "600 руб.",
+        "id":"3s"
     },
     {
         "название": "Пляжная лопатка",
         "тип": "Мини",
         "материал": "Пластик",
-        "цена": "150 руб."
+        "цена": "150 руб.",
+        "id":"4s"
     }
 ]
