--- a/src/data/seasonTool.json
+++ b/src/data/seasonTool.json
@@ -1,30 +1,46 @@
 [
     {
-        "название": "Лопата снеговая",
-        "тип": "Складная",
-        "материал": "Алюминий",
-        "цена": "1200 руб.",
-        "id":"4"
+        "title": "Лопата снеговая",
+        "type": "Складная",
+        "material": "Алюминий",
+        "price": 1200,
+        "id":"7867",
+        "image": "season1.png",
+        "availability": true,
+        "new": false,
+        "count":1
     },
     {
-        "название": "Грабли",
-        "тип": "Распушительные",
-        "материал": "Сталь",
-        "цена": "800 руб.",
-        "id":"5"
+        "title": "Грабли",
+        "type": "Распушительные",
+        "material": "Сталь",
+        "price": 800,
+        "id":"689",
+        "image": "season2.png",
+        "availability": true,
+        "new": false,
+        "count":1
     },
     {
-        "название": "Садовые ножницы",
-        "тип": "Кусторезы",
-        "материал": "Нержавеющая сталь",
-        "цена": "600 руб.",
-        "id":"6"
+        "title": "Садовые ножницы",
+        "type": "Кусторезы",
+        "material": "Нержавеющая сталь",
+        "price":600,
+        "id":"98689",
+        "image": "season3.png",
+        "availability": true,
+        "new":false,
+        "count":1
     },
     {
-        "название": "Пляжная лопатка",
-        "тип": "Мини",
-        "материал": "Пластик",
-        "цена": "150 руб.",
-        "id":"7"
+        "title": "Пляжная лопатка",
+        "type": "Мини",
+        "material": "Пластик",
+        "price": 150,
+        "id":"575877687",
+        "image": "season2.png",
+        "availability": true,
+        "new":false,
+        "count":1
     }
 ]
