--- a/src/data/seasonTool.json
+++ b/src/data/seasonTool.json
@@ -1,5 +1,6 @@
 [
     {
+        "category": "Сезонный инструмент",
         "title": "Лопата снеговая",
         "type": "Складная",
         "material": "Алюминий",
@@ -11,6 +12,7 @@
         "count":1
     },
     {
+        "category": "Сезонный инструмент",
         "title": "Грабли",
         "type": "Распушительные",
         "material": "Сталь",
@@ -22,6 +24,7 @@
         "count":1
     },
     {
+        "category": "Сезонный инструмент",
         "title": "Садовые ножницы",
         "type": "Кусторезы",
         "material": "Нержавеющая сталь",
@@ -33,6 +36,7 @@
         "count":1
     },
     {
+        "category": "Сезонный инструмент",
         "title": "Пляжная лопатка",
         "type": "Мини",
         "material": "Пластик",
